// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Tag Default 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 8px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
}

.c0:hover {
  border-width: 2px;
  padding: 5px 0px 7px 7px;
}

.c0 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .icon,
.c0:focus .icon {
  padding-right: 7px;
  cursor: pointer;
}

.c0:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c0:hover .icon,
.c0:focus .icon {
  color: white;
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0"
    type="SECONDARY"
  >
    THIS IS A TAG
  </div>
</div>
`;

exports[`Storyshots Tag Multiple tags 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 8px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
}

.c2:hover {
  border-width: 2px;
  padding: 5px 0px 7px 7px;
}

.c2 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c2:hover .icon,
.c2:focus .icon {
  padding-right: 7px;
  cursor: pointer;
}

.c2:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c2:hover .icon,
.c2:focus .icon {
  color: white;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 0px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
}

.c0:hover {
  border-width: 2px;
  padding: 5px 0px 7px 7px;
}

.c0 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .icon,
.c0:focus .icon {
  padding-right: 7px;
  cursor: pointer;
}

.c0:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c0:hover .icon,
.c0:focus .icon {
  color: white;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 8px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #f6f8f9;
  color: #59636f;
}

.c1:hover {
  border-width: 2px;
  padding: 5px 0px 7px 7px;
}

.c1 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c1:hover .icon,
.c1:focus .icon {
  padding-right: 7px;
  cursor: pointer;
}

.c1:hover {
  background-color: rgba(0,0,0,0.16);
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0"
    type="SECONDARY"
    value="18-08-16"
  >
    Aug 16, 2018
    <div
      className="icon"
      onClick={[Function]}
    >
      <i
        className="wg-close"
      />
    </div>
  </div>
  <div
    className="c0"
    type="SECONDARY"
  >
    This is a long removable tag
    <div
      className="icon"
      onClick={[Function]}
    >
      <i
        className="wg-close"
      />
    </div>
  </div>
  <div
    className="c1"
    type="NEUTRAL"
  >
    Neutral tag
  </div>
  <div
    className="c2"
    type="SECONDARY"
  >
    And that's an even bigger and wider not removable tag
  </div>
</div>
`;

exports[`Storyshots Tag Neutral 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 8px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #f6f8f9;
  color: #59636f;
}

.c0:hover {
  border-width: 2px;
  padding: 5px 0px 7px 7px;
}

.c0 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .icon,
.c0:focus .icon {
  padding-right: 7px;
  cursor: pointer;
}

.c0:hover {
  background-color: rgba(0,0,0,0.16);
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0"
    type="NEUTRAL"
  >
    THIS IS A TAG
  </div>
</div>
`;

exports[`Storyshots Tag Neutral removable 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 0px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #f6f8f9;
  color: #59636f;
}

.c0:hover {
  border-width: 2px;
  padding: 5px 0px 7px 7px;
}

.c0 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .icon,
.c0:focus .icon {
  padding-right: 7px;
  cursor: pointer;
}

.c0:hover {
  background-color: rgba(0,0,0,0.16);
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0"
    type="NEUTRAL"
  >
    You can remove this tag
    <div
      className="icon"
      onClick={[Function]}
    >
      <i
        className="wg-close"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Tag Removable 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 0px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
}

.c0:hover {
  border-width: 2px;
  padding: 5px 0px 7px 7px;
}

.c0 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .icon,
.c0:focus .icon {
  padding-right: 7px;
  cursor: pointer;
}

.c0:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c0:hover .icon,
.c0:focus .icon {
  color: white;
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0"
    type="SECONDARY"
  >
    You can remove this tag
    <div
      className="icon"
      onClick={[Function]}
    >
      <i
        className="wg-close"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Tag Removable with value 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 0px 8px 8px;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
  background-color: #3498db;
  color: white;
}

.c0:hover {
  border-width: 2px;
  padding: 5px 0px 7px 7px;
}

.c0 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .icon,
.c0:focus .icon {
  padding-right: 7px;
  cursor: pointer;
}

.c0:hover {
  border-color: rgba(0,0,0,0.32);
  background-color: #2980b9;
}

.c0:hover .icon,
.c0:focus .icon {
  color: white;
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0"
    type="SECONDARY"
    value="1"
  >
    Removable Tag #1
    <div
      className="icon"
      onClick={[Function]}
    >
      <i
        className="wg-close"
      />
    </div>
  </div>
</div>
`;
